feat: add user page (/users/:userName)
